--- a/css/header/navigation.css
+++ b/css/header/navigation.css
@@ -1,8 +1,8 @@
-.main-navigation {
-  display: flex !important;
-  justify-content: center;
-  margin: 0 20px;
-  
+.nav-list {
+    display: flex !important;
+    flex-wrap: nowrap !important;
+    justify-content: center;
+    gap: 12px 6px; 
 }
 
 .nav-list {
@@ -31,12 +31,11 @@ body.logged-in .nav-list li.recken-only {
 .nav-list li a {
   background-color: #7a7a7a;
   color: #ffffff;
-  padding: 10px 18px;
+  padding: 10px 10px;
   border-radius: 4px;
   text-decoration: none;
   font-family: 'Georgia', serif;
   font-size: 12px;
-  font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 1px;
   transition: all 0.2s ease-in-out;
